<resources>
    <string name="app_name">Agile Developer</string>
    <string name="app_name_caps">AGILE DEVELOPER</string>
    <string name="create_project">CREATE PROJECT</string>
    <string name="login">LOG IN</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="make_it_hard_to_guess">Make it hard to guess</string>
    <string name="enter_name">Enter name</string>
    <string name="project_name">Project name:</string>
    <string name="project_token">Project token:</string>
    <string name="token">Token</string>
    <string name="title_activity_user_story_display">UserStoryDisplayActivity</string>
    <string name="userstory_edit_label_content">Content:</string>
    <string name="userstory_edit_label_author">Author:</string>
    <string name="userstory_edit_label_button_create">Create</string>
    <string name="userstory_edit_label_button_edit">Edit</string>
    <string name="estimate_delete">Delete</string>
    <string name="got_it">Got it!</string>
    <string name="info_text">The Agile Developer is an android application for managing agile software project management activities. You and your agile development team can use this app as a platform to manage the team’s user stories. You can add user stories by pressing the plus icon. To edit or delete an existing user story, simply press the user story itself and you will be carried to a screen dedicated to the corresponding user story. You also have the possibility to play planning poker and estimate a user story priority. Simple select the menu icon in the top right corner to use these activities.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
