<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ProjectActivity">


    <TextView
        android:id="@+id/projectTokenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15px"
        android:text="@string/create_project"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/projectNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:hint="@string/enter_name"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal"
        android:inputType="text" />

    <TextView
        android:id="@+id/projectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_token"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/projectTokenInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:hint="@string/make_it_hard_to_guess"
        android:background="@drawable/edit_text_background"
        android:gravity="center_horizontal"
        android:inputType="text" />

    <Button
        android:id="@+id/createButton"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:padding="10dp"
        android:textSize="22sp"
        android:layout_margin="5dp"
        android:text="@string/create" />
    <Button
        android:id="@+id/backButton"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:padding="10dp"
        android:background="@drawable/button"
        android:text="@string/back" />


</LinearLayout>